<resources>
    <string name="app_name">G.K Driver</string>

    <!--login Page -->
    <string name="headingMessage">Sign in with your GK Driver Account</string>
    <string name="forgot">FORGOT PASSWORD? </string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="btn_sign_up">Sigin in</string>>
    <string name="err_msg_email">Enter valid email addresss</string>
    <string name="err_msg_password">Enter the password</string>


    <!--forgotPassword -->
    <string name="forgotHeading">Forgot your Password?</string>
    <string name="forgotPasswordInstruction">Enter your email below to receive  your password reset instructions</string>
    <string name="forgotPassword">Send Password</string>

    <!-- showing mesasage when  the GPS is not Activity and when Internet connection is lost-->
    <string name="messahe">GPS is disabled in your device. Would you like to enable it?</string>
    <string name="error">Check your internet connection</string>
    <string name="GpsButton">Goto Settings Page To Enable GPS</string>
    <string name="button">Cancel</string>
    <string name="internet_connection">"You need a network connection to use this application. Please turn on mobile network or Wi-Fi in Settings.</string>
    <string name="titleMsg">Unable to connect</string>
    <string name="settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="reset">Reset Password</string>
    <string name="forgotPasswords">Forgot Password</string>

    <string name="Availablity">Availablity</string>
    <string name="Delivery">Delivery</string>
    <string name="Status">Status</string>
    <string name="orderHistory">History</string>
    <string name="status_out_delivery">Status: Out for Delivery</string>

    <string name="Deilvery">Delivery Status</string>
    <string name="details">Delivery Details</string>
    <string name="order">Order History</string>
    <string name="availbility">Availbility</string>
    <string name="setavailbility">Set Availablity</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="setStatus">Delivery status</string>
    <string name="outfor">Out for delivery</string>
    <string name="delivered">Delivered</string>
    <string name="canceled">Canceled</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>

    <!-- password validaiton-->
    <string name="confimation">Confrimation Message</string>
    <string name="validationMsg">Validation Failed!</string>
    <string name="field">All fields are mandatory.</string>
    <string name="pasword">Password:must contain min 8 and upto 32 AplhaNumeric.</string>
    <string name="newpassword">New Password:must contain min 8 and upto 32 AplhaNumeric.</string>
    <string name="confrompaswiord">Confirm New Password:must contain min 8 and upto 32 AplhaNumeric.</string>
    <string name="match">New password must contain min 8 and upto 15 chars.</string>
    <string name="update_account">Your account is updated successfully.</string>
    <string name="createsuccessfully">Your account is create successfully.</string>
    <string name="mandatory">All fields are mandatory.</string>
    <string name="current">Old password</string>
    <string name="NewPassword">New password</string>
    <string name="ConfirmNewPasword">Confirm password</string>
    <string name="match_does_not"> does not match</string>
    <string name="passwordmymsg">must be contain min 8 and upto 32 AplhaNumeric.</string>
    <string name="can_not_change">You can not change type of service.</string>
    <string name="passwerod">password:</string>
    <string name="changePassword">Change Password Failed.</string>
    <string name="validpasssword">Please enter valid</string>


    <!---deliveryDetailsFragment-->
    <string name="address">Shipping Address</string>
    <string name="orderSummary">Order Summary</string>
    <string name="call"> Call\nRichard </string>
    <string name="phone">Phone</string>
    <string name="order_id">Order # </string>
    <string name="order_date">Order date</string>
    <string name="price">Price</string>
    <string name="qunatity">Quantity</string>

    <!---assoff nwo-->
    <string name="name">Richard</string>
    <string name="add">Green Koala Studio</string>
    <string name="city">P.O Box 388</string>
    <string name="pin">Marshfield,MA 02050</string>
    <string name="phone_ni">Phone: (877)304-4493</string>
    <string name="summery">Spinach Salad with Mint</string>
    <string name="summery_context">Spinach salad with cantaloupe,avocado,red peppers,and mint Truly a refreshing summer delight!Serve with crush bread and a lovely buttery chardonnay</string>


    <!---message-->
    <string name="sucessfulllogin">Welcome </string>
    <string name="failedtologin">Failed to Login</string>
    <string name="comments_status">Please add comments.</string>
    <string name="quit">Logout Alert</string>
    <string name="really_quit">Are you sure you want to logout</string>

    <string name="err_msg_password_char">Enter atleast one char</string>
    <string name="err_msg_password_digit">Enter atleast one digit </string>
    <string name="err_msg_password_length">password should contain atleast 8 or more alphanumberic.</string>
    <string name="deleteAll">Delete All</string>


    <string name="msg_commment">Please kindly Add Comments</string>
    <string name="msg_avilabilty">Please kindly set Availablity</string>
    <string name="msg_delivery">Please kindly set  Delivery Status</string>

</resources>
