<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.effone.gkdriver.fragments.ResetPasswordFragment"
    android:clickable="true"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="bottom"
            android:layout_margin="10dp"
            android:background="@drawable/button_rounded_corner"
            android:gravity="center"
            android:text="@string/submit"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/avalibailty"
            style="@style/HeaderMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgotPasswords" />

        <View
            android:id="@+id/line1"
                android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/avalibailty"
            android:layout_marginBottom="10dp"
            android:background="@color/viewline" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line1"
            android:layout_margin="10dp">


            <EditText
                android:id="@+id/et_fwd_email_id"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="36dp"
                android:background="@drawable/rounded_corner_edittext"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLength="248"
                android:padding="5dp" />


        </RelativeLayout>
    </RelativeLayout>
</FrameLayout>
